# spud

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bootstrap_spud.sh  deny.toml
.github/: copilot-instructions.md
.github/workflows/: changelog.yml  rust.yml
assets/faces/default/: face.json
crates/spud-agent/: Cargo.toml
crates/spud-agent/src/: agent.rs  default_pack.rs  lib.rs  loader.rs  mood.rs  types.rs
crates/spud-app/: Cargo.toml
crates/spud-app/src/: main.rs
crates/spud-config/: Cargo.toml
crates/spud-config/src/: lib.rs  plugin.rs
crates/spud-core/: Cargo.toml
crates/spud-core/src/: bus.rs  command.rs  console.rs  event.rs  fps.rs  lib.rs  logging.rs  module.rs  registry.rs  state.rs
crates/spud-mod-hello/: Cargo.toml
crates/spud-mod-hello/src/: lib.rs
crates/spud-mod-stats/: Cargo.toml
crates/spud-mod-stats/src/: format.rs  lib.rs  render.rs  telemetry.rs
crates/spud-remote/: Cargo.toml
crates/spud-remote/openrpc/: spud-plugin-host-v1.openrpc.json
crates/spud-remote/src/: lib.rs  permissions.rs  protocol.rs  runtime.rs
crates/spud-ui/: Cargo.toml
crates/spud-ui/src/: console.rs  face.rs  graphics.rs  iterm.rs  layout.rs  lib.rs  renderer.rs  shell.rs  sixel.rs
docs/: phase-6-agentic-module.md
scripts/: check-cargo-deny.sh  check-semgrep.sh  check-static-analysis.sh  extract_sheet.py  update-changelog.sh
