[workspace]
resolver = "2"
members = [
  "crates/spud-app",
  "crates/spud-core",
  "crates/spud-ui",
  "crates/spud-agent",
  "crates/spud-config",
  "crates/spud-remote",
  "crates/spud-mod-hello",
  "crates/spud-mod-stats",
]

[workspace.dependencies]
crossterm = "0.29"
ratatui = "0.30"
unicode-width = "0.2"
