[workspace]
resolver = "2"
members = [
  "crates/spud-app",
  "crates/spud-core",
  "crates/spud-ui",
  "crates/spud-agent",
  "crates/spud-config",
  "crates/spud-remote",
  "crates/spud-mod-hello",
  "crates/spud-mod-stats",
]

[workspace.dependencies]
anyhow = "1"
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
unicode-width = "0.2"
